--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -26,6 +26,23 @@
     </header>
     <div class="container">
       <%= yield %>
+
+  <% if logged_in? %>
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
+        <%= render 'shared/user_info' %>
+      </section>
+      <section class="micropost_form">
+        <%= render 'shared/micropost_form' %>
+      </section>
+    </aside>
+    <div class="col-md-8">
+      <h3>Micropost Feed</h3>
+      <%= render 'shared/feed' %>
+    </div>
+  </div>
+<% else %>
 		<div class="center jumbotron">
 		  <h1>Welcome to the Sample App</h1>
 
@@ -39,7 +56,9 @@
 		</div>
 
 		<%= link_to image_tag("rails.png", alt: "Rails logo"),
-		            'http://rubyonrails.org/' %>      
+		            'http://rubyonrails.org/' %>  
+    <% end %>
+
     </div>
   </body>
 </html>
