--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -14,15 +14,16 @@
   <body>
     <div class="container">
       <%= yield %>
-<<<<<<< HEAD
-=======
 
->>>>>>> user-microposts
+
   <% if logged_in? %>
   <div class="row">
     <aside class="col-md-4">
       <section class="user_info">
         <%= render 'shared/user_info' %>
+      </section>
+      <section class="stats">
+        <%= render 'shared/stats' %>
       </section>
       <section class="micropost_form">
         <%= render 'shared/micropost_form' %>
@@ -47,7 +48,15 @@
 		</div>
 
 		<%= link_to image_tag("rails.png", alt: "Rails logo"),
-		            'http://rubyonrails.org/' %>  
+		            'http://rubyonrails.org/' %> 
+
+      <% if @feed_all.any? %>
+        <ol class="microposts">
+          <%= render @feed_all %>
+        </ol>
+      <% end %>
+
+
     <% end %>
 
     </div>
