--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,5 +1,6 @@
 <li id="comment-<%= comment.id %>">
-  <span class="user"><%= link_to comment.user.name, comment.user %></span>
+  <span class="user"><%= link_to comment.user.name, comment.user %>
+  </span>
   <span class="content">
     <%= comment.content %>
   </span>
