--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,6 +1,7 @@
 <li id="micropost-<%= micropost.id %>">
   <%= link_to gravatar_for(micropost.user, size: 50), micropost %>
-  <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
+  <span class="user"><%= link_to micropost.user.name, micropost.user %>
+  </span>
   <span class="content">
     <%= micropost.title %>
     <%= image_tag micropost.picture.url if micropost.picture? %>
