--- a/app/views/shared/_comment_form.html.erb
+++ b/app/views/shared/_comment_form.html.erb
@@ -4,5 +4,5 @@
     <%= f.text_field :content, placeholder: "Compose new micropost..." %>
     <%= f.hidden_field  :micropost_id, value: @micropost.id %>
   </div>
-  <%= f.submit "Post", class: "btn btn-primary" %>
+  <%= f.submit "Comment", class: "btn btn-primary" %>
 <% end %>
